--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
