Refactor API routes to ensure consistent JSON responses and improve error handling
- Updated package.json to add a new script for development with turbopack and a clean script.
- In src/app/api/cart/route.ts, added headers to ensure responses are always JSON, improved error handling for request body parsing, and ensured consistent error responses.
- In src/app/api/checkout/route.ts, added checks for Shopify configuration and client initialization, and improved error handling for GraphQL responses.

--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
+    "dev:turbo": "next dev --turbopack",
     "build": "next build --turbopack --no-lint",
     "start": "next start",
-    "lint": "eslint --max-warnings 0"
+    "lint": "eslint --max-warnings 0",
+    "clean": "rm -rf .next node_modules package-lock.json && npm install"
   },
   "dependencies": {
     "@shopify/storefront-api-client": "^1.0.9",
