--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean": "rm -rf .next node_modules package-lock.json && npm install"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@shopify/storefront-api-client": "^1.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
