--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "dev:turbo": "next dev --turbopack",
-    "build": "next build --turbopack --no-lint",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint --max-warnings 0",
     "clean": "rm -rf .next node_modules package-lock.json && npm install"
@@ -21,7 +21,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
-    "swiper": "^12.0.2",
+    "swiper": "^12.0.2",  
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
